packages/GlobalSalesCore/main/default/objects/MultiCurrencySettings__c/MultiCurrencySettings__c.object-meta.xml
<CustomObject>
    <description>Configuration settings for multi-currency support in international sales</description>
    <label>Multi-Currency Setting</label>
    <nameField>
        <displayFormat>MCS-{000000}</displayFormat>
        <label>Setting Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Multi-Currency Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>