packages/GlobalSalesCore/main/default/objects/MultiCurrencySettings__c/fields/ConversionRate__c.field-meta.xml
<CustomField>
    <fullName>ConversionRate__c</fullName>
    <label>Conversion Rate</label>
    <precision>18</precision>
    <required>true</required>
    <scale>6</scale>
    <type>Number</type>
</CustomField>