packages/GlobalSalesCore/main/default/objects/MultiCurrencySettings__c/fields/CurrencyCode__c.field-meta.xml
<CustomField>
    <fullName>CurrencyCode__c</fullName>
    <label>Currency Code</label>
    <length>3</length>
    <required>true</required>
    <type>Text</type>
</CustomField>