packages/GlobalSalesCore/main/default/objects/MultiCurrencySettings__c/fields/RegionAssociation__c.field-meta.xml
<CustomField>
    <fullName>RegionAssociation__c</fullName>
    <label>Region Association</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>North America</fullName>
            </value>
            <value>
                <fullName>EMEA</fullName>
            </value>
            <value>
                <fullName>APAC</fullName>
            </value>
            <value>
                <fullName>LATAM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>